# 66.20-Tp

./: README.md
tp0/: .gitignore  CMakeLists.txt  calculo.c  install.sh  main.c  pgmFactory.h
tp0/src/: main.c
tp0/test/: CMakeLists.txt  functionalTests.sh  main.c
tp1/tp1-2014-src/: Usage.docx  mips32_plot.S
tp1/tp1-2016/: .gitignore  Makefile  mips32_plot.S  mips32_plot.c
